sort.basic.lessons.sort.basic.bubble.AlgBubbleSort1.scala.error
AlgBubbleSort1:4: error: type mismatch;
 found   : Unit
 required: Boolean
  while (tri = false) {
             ^AlgBubbleSort1:8: error: not found: value j
        echange(i, j)
                   ^AlgBubbleSort1:12: error: type mismatch;
 found   : Unit
 required: Boolean
    if (n = 0){
          ^